# design-research-analysis

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  examples.yml  workflow.yml
docs/: README.md  analysis_recipes.rst  api.rst  automation_baseline.rst  cli_reference.rst  concepts.rst  conf.py  dependencies_and_extras.rst  experiments_handoff.rst  index.rst  installation.rst  quickstart.rst  typical_workflow.rst  unified_table_schema.rst  vscode_start.rst  workflows.rst  workflows_dimred.rst  workflows_embedding_maps.rst  workflows_language.rst  workflows_sequence.rst  workflows_stats.rst
docs/_static/: custom.css
docs/examples/: basic_usage.rst  condition_pair_significance.rst  dimred_pca.rst  embedding_maps_trajectories.rst  experiment_artifacts_handoff.rst  idea_space_metrics.rst  index.rst  lab_study_pipeline.rst  language_custom_embedder.rst  mechanical_design_review_analysis.rst  sequence_from_table.rst  stats_interrater_reliability.rst  stats_regression.rst  unified_table_validation.rst
examples/: README.md  api_surface_walkthrough.py  basic_usage.py  condition_pair_significance.py  dimred_pca.py  embedding_maps_trajectories.py  experiment_artifacts_handoff.py  idea_space_metrics.py  lab_study_pipeline.py  language_custom_embedder.py  mechanical_design_review_analysis.py  sequence_from_table.py  stats_interrater_reliability.py  stats_regression.py  unified_table_validation.py
scripts/: check_coverage_thresholds.py  check_docs_consistency.py  check_example_api_coverage.py  check_google_docstrings.py  check_release_install.py  generate_example_docs.py  generate_examples_badges.py  generate_examples_metrics.py
src/design_research_analysis/: __init__.py  _comparison.py  _version.py  cli.py  core.py  dataset.py  dimred.py  embedding_maps.py  integration.py  language.py  reliability.py  runtime.py  stats.py  table.py  visualization.py
src/design_research_analysis/sequence/: __init__.py  _backend.py  embeddings.py  models.py  visualization.py
tests/: conftest.py  test_cli.py  test_comparison_helpers.py  test_core.py  test_coverage_contracts.py  test_dataset.py  test_dimred.py  test_dimred_additional.py  test_dimred_metrics.py  test_embedding_maps.py  test_examples.py  test_integration.py  test_language.py  test_public_api.py  test_result_algebra.py  test_runtime.py  test_runtime_additional.py  test_sequence_embeddings.py  test_sequence_hmm.py  test_sequence_integration_optional.py  test_sequence_markov.py  test_sequence_mocks.py  test_sequence_table_adapters.py  test_sequence_visualization.py  test_stats.py  test_stats_condition_pairs.py  test_stats_nonparametric_power.py  test_table.py  test_table_additional.py  test_version.py  test_visualization.py
